fixed background overflow

--- a/starter-code/styles/shared.css
+++ b/starter-code/styles/shared.css
@@ -9,8 +9,9 @@ body {
   color: #FFFFFF;
   font-weight: 400;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: top;
   background-size: cover;
+  background-attachment: fixed;
 }
 
 h1 {
@@ -93,16 +94,16 @@ p {
 }
 
 @media only screen and (max-width: 1150px) {
+  html, body {
+    overflow-y: auto;
+  }
+
   body {
     background-position: center;
   }
 }
 
 @media only screen and (max-width: 670px) {
-  html, body {
-    overflow: auto;
-  }
-
   h1 {
     font-size: 80px;
     line-height: 100px;
